Save command line in readme